Fixes a layout bug and pushes changes forgotten in last commit.

--- a/css/tufte.css
+++ b/css/tufte.css
@@ -470,7 +470,7 @@ li .sidenote, li .marginnote{ margin-right: -60%; } //added to allow for the fac
 p, footer, div.table-wrapper, div.mathblock {
   width: 55%; }
 
-li p {
+ul li p {
   width: 100%; }
 
 div.table-wrapper {
